# wgbs-pipeline

./: .dockerignore  .dockstore.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  bs-call.wdl  croo_out_def.json  dockstore_test_input.json  glob_helper.py  index.wdl  inp.json  inp2.json  inp_concat.json  inp_concat2.json  inputs-v2.json  inputs.json  make_input_json_from_portal.py  map.wdl  mapping.wdl  metadata_google.json  metadata_google_ENCSR750CPN.json  metadata_google_ENCSR786DCL.json  pyproject.toml  requirements-gembs.txt  requirements.txt  setup.py  short_input.json  test.wdl  tox.ini  wgbs-pipeline-v2.wdl  wgbs-pipeline.wdl
.circleci/: Dockerfile  config.yml
backends/: backend.conf
ci/: Dockerfile
docs/: CONTRIBUTING.md  reference.md  usage.md
helpers/: flatten.py  glob.py  glob_helper.py  pyglob.py
src/: make_metadata_csv.py
test/: metadata.csv  yeast.BS.info
test/ENCSR750CPN/: ENCSR750CPN.json  metadata.csv
test/ENCSR786DCL/: ENCSR786DCL.json  metadata.csv
tests/: __init__.py  caper_run.sh  conftest.py  pytest_workflow_no_relative_output_paths.json  pytest_workflow_options.json  test_make_conf.py  test_make_metadata_csv.py  test_parse_map_qc_html.py
wgbs_pipeline/: __init__.py  bsmooth.R  calculate_average_coverage.py  calculate_bed_pearson_correlation.py  make_conf.py  make_metadata_csv.py  parse_map_qc_html.py
wgbs_pipeline/bismark-bsmooth-to-encode-bed-converter/: Cargo.toml
wgbs_pipeline/bismark-bsmooth-to-encode-bed-converter/src/: main.rs
workflow_opts/: docker.json  docker_google.json
(+94 files in other folders)
