[package]
name = "bismark-bsmooth-to-encode-bed-converter"
version = "0.1.0"
authors = ["paul <paulsud@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
csv = "1.1"
serde = { version = "1.0.104", features = ["derive"] }
palette = "0.5.0"
float-cmp = "0.8.0"
